# TravelOps

./: .env.example  README.md  app.py  index.py  pyproject.toml  requirements.txt  run_agent.py
api/: index.py
docs/: README.md  acceptance-criteria.md  run-with-uv.md  scenario-matrix.md  trace-observability.md
src/: __init__.py  config.py  logging_config.py
src/agents/: __init__.py  orchestrator.py  research_agent.py  risk_agent.py
src/output/: __init__.py  contract.py
src/state/: __init__.py  machine.py
src/tools/: __init__.py  api_clients.py  core.py  schemas.py
src/tools/mocks/: __init__.py  builders.py
src/tracing/: __init__.py  langfuse_setup.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  responses.py
tests/scenarios/: test_integration_scenarios.py  test_observability.py  test_planning.py  test_robustness.py  test_safety.py  test_tool_orchestration.py
